--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Site
 title: 子津子铭的博客
-subtitle: 人需要有信仰，哪怕仅仅来源于谦
+subtitle: 人需要有信仰，哪怕仅仅是对于钱的信仰
 description: 描述。。。 暂时没想到
 keywords: 见识 规矩 爱
 author: 子津子铭
